[package]
name = "scaffold"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version="1.0.151", features=["derive"] }
serde_yaml = "0.9.16"
# tracing = { version="0.1.37", features=["release_max_level_off"] }
tracing = { version="0.1.37" }
tracing-subscriber = "0.3.16"
winit = "0.27.5"

[profile.release]
lto = true
strip = true